--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@tailwindcss/typography": "^0.4.0",
     "autoprefixer": "^10.2.3",
     "next": "10.0.5",
+    "next-images": "^1.7.0",
     "next-themes": "^0.0.10",
     "postcss": "^8.2.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-icons": "^4.1.0",
     "tailwindcss": "^2.0.2"
   }
 }
