--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
+    "swr": "^0.4.1",
     "tailwindcss": "^2.0.2"
   }
 }
