--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "next": "10.0.5",
     "next-images": "^1.7.0",
     "next-themes": "^0.0.10",
-    "postcss": "^8.2.4",
+    "postcss": "^8.2.8",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
     "swr": "^0.4.1",
-    "tailwindcss": "^2.0.2"
+    "tailwindcss": "^2.0.3"
+  },
+  "devDependencies": {
+    "@tailwindcss/jit": "^0.1.1"
   }
 }
