--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.4.2",
     "@tailwindcss/typography": "^0.4.0",
     "autoprefixer": "^10.2.3",
     "next": "10.0.5",
