--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
+    "styled-components": "^5.2.1",
     "swr": "^0.4.1",
     "tailwindcss": "^2.0.3"
   },
