--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@sendgrid/mail": "^7.4.2",
     "@tailwindcss/typography": "^0.4.0",
     "autoprefixer": "^10.2.3",
+    "hamburger-react": "^2.4.0",
     "next": "10.0.5",
     "next-images": "^1.7.0",
     "next-themes": "^0.0.10",
