--- a/package.json
+++ b/package.json
@@ -8,20 +8,18 @@
     "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
-    "@sendgrid/mail": "^7.4.2",
-    "@tailwindcss/typography": "^0.4.0",
-    "autoprefixer": "^10.2.3",
-    "hamburger-react": "^2.4.0",
-    "next": "10.0.5",
-    "next-images": "^1.7.0",
-    "next-themes": "^0.0.10",
-    "postcss": "^8.2.8",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-icons": "^4.1.0",
-    "styled-components": "^5.2.1",
-    "swr": "^0.4.1",
-    "tailwindcss": "^2.0.3"
-  },
-  "devDependencies": {}
+    "@tailwindcss/typography": "^0.5.19",
+    "autoprefixer": "^10.4.21",
+    "hamburger-react": "^2.5.2",
+    "next": "^15.5.4",
+    "next-themes": "^0.4.6",
+    "postcss": "^8.5.6",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
+    "resend": "^6.1.2",
+    "styled-components": "^6.1.19",
+    "swr": "^2.3.6",
+    "tailwindcss": "^3.4.17"
+  }
 }
